--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,17 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adega Lounge</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Montserrat', sans-serif; background-color: #121212; color: #f0f0f0; line-height: 1.6; }
+    .container { width: 90%; max-width: 1200px; margin: auto; }
+    header { background: #1c1c1c; padding: 20px 0; position: relative; }
+    header .container { display: flex; justify-content: space-between; align-items: center; }
+    header h1 { font-size: 2rem; }
+    .nav-menu { list-style: none; display: flex; gap: 20px; }
+    .nav-menu a { color: #f7c400; text-decoration: none; font-weight: 600; transition: color 0.3s; }
+    .nav-menu a:hover { color: #fff; }
+    .menu-toggle { display: none; font-size: 1.8rem; color: #f7c400; cursor: pointer; }
+    .hero { background: url('https://source.unsplash.com/1600x600/?wine,bar') center/cover no-repeat; text-align: center; padding: 80px 20px; }
+    .hero h2 { font-size: 2.5rem; margin-bottom: 10px; }
+    .hero p { font-size: 1.2rem; margin-bottom: 40px; }
+    .btn { padding: 14px 28px; background: #f7c400; color: #000; border: none; border-radius: 30px; font-weight: bold; text-decoration: none; transition: background 0.3s; display: inline-block; }
+    .btn:hover { background: #e0b200; }
+    .section { padding: 60px 20px; }
+    .cards-bebidas { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; }
+    .card { background: #1c1c1c; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); transition: transform 0.3s; }
+    .card:hover { transform: scale(1.05); }
+    .card i { font-size: 2rem; margin-bottom: 10px; color: #f7c400; }
+    .card h3 { margin-bottom: 10px; color: #f7c400; }
+    .galeria { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; }
+    .galeria img { width: 100%; border-radius: 8px; transition: transform 0.3s; }
+    .galeria img:hover { transform: scale(1.05); }
+    .eventos img { width: 100%; border-radius: 10px; margin-bottom: 20px; }
+    footer { background: #000; text-align: center; padding: 30px 20px; color: #888; }
+    .footer-info { margin-top: 20px; display: flex; flex-direction: column; gap: 10px; font-size: 0.9rem; }
+    .footer-icons { margin-top: 10px; }
+    .footer-icons a { color: #f7c400; margin: 0 10px; font-size: 1.5rem; text-decoration: none; }
+    @media (max-width: 768px) {
+      .menu-toggle { display: block; }
+      .nav-menu { display: none; flex-direction: column; background: #1c1c1c; position: absolute; top: 60px; left: 0; width: 100%; text-align: center; padding: 20px 0; }
+      .nav-menu.active { display: flex; }
+      .nav-menu li { margin: 10px 0; }
+      .footer-info { align-items: center; text-align: center; }
+    }
+  </style>
 </head>
 <body>
-  <header class="header">
+  <header>
     <div class="container">
       <h1>Adega Lounge</h1>
+      <i class="fas fa-bars menu-toggle" onclick="toggleMenu()"></i>
       <nav>
-        <ul class="nav-menu">
+        <ul class="nav-menu" id="navMenu">
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#bebidas">Bebidas</a></li>
-          <li><a href="#ambiente">Ambiente</a></li>
+          <li><a href="#galeria">Ambiente</a></li>
+          <li><a href="#eventos">Eventos</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
@@ -25,8 +65,8 @@
 
   <section class="hero">
     <div class="container">
-      <h2>Experiências únicas em cada taça</h2>
-      <p>Drinks, vinhos e um ambiente inesquecível</p>
+      <h2>Bem-vindo à Adega Lounge</h2>
+      <p>O melhor ambiente para relaxar e apreciar boas bebidas</p>
       <a href="#contato" class="btn">Reservar Mesa</a>
     </div>
   </section>
@@ -34,71 +74,71 @@
   <section id="sobre" class="section">
     <div class="container">
       <h2>Sobre Nós</h2>
-      <p>O Adega Lounge é o lugar ideal para quem aprecia boas bebidas em um ambiente sofisticado e acolhedor. Com uma carta variada e atendimento premium, oferecemos experiências memoráveis todas as noites.</p>
+      <p>A Adega Lounge oferece um espaço único, sofisticado e aconchegante para amantes de vinhos, drinks e boa música. Ideal para encontros, comemorações ou apenas relaxar com estilo.</p>
     </div>
   </section>
 
   <section id="bebidas" class="section">
     <div class="container">
       <h2>Cartela de Bebidas</h2>
-      <div class="grid">
-        <div class="card"><img src="bebida1.jpg" alt=""><h3>Malbec Argentino</h3><p>Vinho tinto seco - Argentina</p></div>
-        <div class="card"><img src="bebida2.jpg" alt=""><h3>Negroni Clássico</h3><p>Drink italiano com gin</p></div>
-        <div class="card"><img src="bebida3.jpg" alt=""><h3>Espumante Rosé</h3><p>Frutado e refrescante</p></div>
-        <div class="card"><img src="bebida4.jpg" alt=""><h3>Whisky 12 anos</h3><p>Notas amadeiradas e suaves</p></div>
+      <div class="cards-bebidas">
+        <div class="card"><i class="fas fa-wine-glass"></i><h3>Vinhos</h3><p>Brancos, tintos e rosés selecionados.</p></div>
+        <div class="card"><i class="fas fa-cocktail"></i><h3>Drinks</h3><p>Clássicos e autorais preparados na hora.</p></div>
+        <div class="card"><i class="fas fa-beer"></i><h3>Cervejas</h3><p>Artesanais e tradicionais geladas.</p></div>
+        <div class="card"><i class="fas fa-glass-whiskey"></i><h3>Destilados</h3><p>Whisky, vodka, gin e mais.</p></div>
       </div>
     </div>
   </section>
 
-  <section id="ambiente" class="section">
+  <section id="galeria" class="section">
     <div class="container">
-      <h2>Nosso Ambiente</h2>
+      <h2>Nosso Espaço</h2>
       <div class="galeria">
-        <img src="ambiente1.jpg" alt="Ambiente 1" />
-        <img src="ambiente2.jpg" alt="Ambiente 2" />
-        <img src="ambiente3.jpg" alt="Ambiente 3" />
+        <img src="https://source.unsplash.com/800x500/?bar,cozy" alt="Ambiente Único">
       </div>
+    </div>
+  </section>
+
+  <section id="eventos" class="section eventos">
+    <div class="container">
+      <h2>Eventos Especiais</h2>
+      <img src="https://source.unsplash.com/800x400/?party,night" alt="Evento">
+      <p>Oferecemos noites temáticas, degustações e música ao vivo. Acompanhe nossas redes para novidades.</p>
     </div>
   </section>
 
   <section id="contato" class="section">
     <div class="container">
-      <h2>Contato & Reservas</h2>
-      <form class="formulario">
-        <input type="text" placeholder="Seu nome" required />
-        <input type="tel" placeholder="Telefone para contato" required />
-        <input type="date" required />
-        <input type="number" placeholder="Número de pessoas" required />
-        <textarea placeholder="Mensagem adicional (opcional)"></textarea>
-        <button type="submit">Enviar Reserva</button>
+      <h2>Contato</h2>
+      <form>
+        <input type="text" placeholder="Seu nome" required style="width:100%;padding:10px;margin-bottom:10px;border-radius:5px;border:none;">
+        <input type="email" placeholder="Seu e-mail" required style="width:100%;padding:10px;margin-bottom:10px;border-radius:5px;border:none;">
+        <textarea placeholder="Mensagem" required style="width:100%;padding:10px;margin-bottom:10px;border-radius:5px;border:none;"></textarea>
+        <button type="submit" class="btn">Enviar</button>
       </form>
     </div>
   </section>
 
-  <footer class="footer">
+  <footer>
     <div class="container">
       <p>&copy; 2025 Adega Lounge - Todos os direitos reservados.</p>
-      <div class="footer-icons">
-        <a href="https://wa.me/5511999999999" target="_blank"><i class="fab fa-whatsapp"></i></a>
-        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://maps.google.com?q=Rua+Exemplo,+123,+Cidade" target="_blank"><i class="fas fa-map-marker-alt"></i></a>
+      <div class="footer-info">
+        <p>Horário de funcionamento: Terça a Domingo - 18h às 02h</p>
+        <p>Endereço: Rua dos Vinhos, 123 - Centro, São Paulo - SP</p>
+        <div class="footer-icons">
+          <a href="https://wa.me/5511999999999" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
       </div>
     </div>
   </footer>
 
-  <a href="https://wa.me/5511999999999" class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
-
-  <script src="https://unpkg.com/scrollreveal"></script>
   <script>
-    ScrollReveal().reveal('.section', {
-      origin: 'bottom',
-      distance: '50px',
-      duration: 1000,
-      easing: 'ease-in-out',
-      interval: 200
-    });
+    function toggleMenu() {
+      document.getElementById('navMenu').classList.toggle('active');
+    }
+    ScrollReveal().reveal('.section', { origin: 'bottom', distance: '40px', duration: 1000, interval: 200 });
   </script>
 </body>
 </html>
