--- a/index.html
+++ b/index.html
@@ -11,35 +11,124 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Montserrat', sans-serif; background-color: #121212; color: #f0f0f0; line-height: 1.6; }
     .container { width: 90%; max-width: 1200px; margin: auto; }
-    header { background: #1c1c1c; padding: 20px 0; position: relative; }
+    header {
+      background: #1c1c1c;
+      padding: 20px 0;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
     header .container { display: flex; justify-content: space-between; align-items: center; }
     header h1 { font-size: 2rem; }
     .nav-menu { list-style: none; display: flex; gap: 20px; }
     .nav-menu a { color: #f7c400; text-decoration: none; font-weight: 600; transition: color 0.3s; }
     .nav-menu a:hover { color: #fff; }
     .menu-toggle { display: none; font-size: 1.8rem; color: #f7c400; cursor: pointer; }
-    .hero { background: url('https://source.unsplash.com/1600x600/?wine,bar') center/cover no-repeat; text-align: center; padding: 80px 20px; }
-    .hero h2 { font-size: 2.5rem; margin-bottom: 10px; }
-    .hero p { font-size: 1.2rem; margin-bottom: 40px; }
-    .btn { padding: 14px 28px; background: #f7c400; color: #000; border: none; border-radius: 30px; font-weight: bold; text-decoration: none; transition: background 0.3s; display: inline-block; }
+
+    .hero {
+      position: relative;
+      background: url('https://source.unsplash.com/1600x600/?wine,bar') center/cover no-repeat;
+      text-align: center;
+      padding: 100px 20px 80px;
+      color: #fff;
+    }
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      z-index: 1;
+    }
+    .hero .container {
+      position: relative;
+      z-index: 2;
+    }
+    .hero h2 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 50px;
+    }
+    .btn {
+      padding: 14px 28px;
+      background: #f7c400;
+      color: #000;
+      border: none;
+      border-radius: 30px;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background 0.3s;
+      display: inline-block;
+    }
     .btn:hover { background: #e0b200; }
     .section { padding: 60px 20px; }
-    .cards-bebidas { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; }
-    .card { background: #1c1c1c; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); transition: transform 0.3s; }
+    .cards-bebidas {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #1c1c1c;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s;
+    }
     .card:hover { transform: scale(1.05); }
     .card i { font-size: 2rem; margin-bottom: 10px; color: #f7c400; }
     .card h3 { margin-bottom: 10px; color: #f7c400; }
-    .galeria { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; }
-    .galeria img { width: 100%; border-radius: 8px; transition: transform 0.3s; }
+    .galeria {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+    }
+    .galeria img {
+      width: 100%;
+      border-radius: 8px;
+      transition: transform 0.3s;
+    }
     .galeria img:hover { transform: scale(1.05); }
-    .eventos img { width: 100%; border-radius: 10px; margin-bottom: 20px; }
-    footer { background: #000; text-align: center; padding: 30px 20px; color: #888; }
-    .footer-info { margin-top: 20px; display: flex; flex-direction: column; gap: 10px; font-size: 0.9rem; }
+    .eventos img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    footer {
+      background: #000;
+      text-align: center;
+      padding: 30px 20px;
+      color: #888;
+    }
+    .footer-info {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      font-size: 0.9rem;
+    }
     .footer-icons { margin-top: 10px; }
-    .footer-icons a { color: #f7c400; margin: 0 10px; font-size: 1.5rem; text-decoration: none; }
+    .footer-icons a {
+      color: #f7c400;
+      margin: 0 10px;
+      font-size: 1.5rem;
+      text-decoration: none;
+    }
     @media (max-width: 768px) {
       .menu-toggle { display: block; }
-      .nav-menu { display: none; flex-direction: column; background: #1c1c1c; position: absolute; top: 60px; left: 0; width: 100%; text-align: center; padding: 20px 0; }
+      .nav-menu {
+        display: none;
+        flex-direction: column;
+        background: #1c1c1c;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        text-align: center;
+        padding: 20px 0;
+      }
       .nav-menu.active { display: flex; }
       .nav-menu li { margin: 10px 0; }
       .footer-info { align-items: center; text-align: center; }
@@ -50,7 +139,7 @@
   <header>
     <div class="container">
       <h1>Adega Lounge</h1>
-      <i class="fas fa-bars menu-toggle" onclick="toggleMenu()"></i>
+      <i class="fas fa-bars menu-toggle" onclick="toggleMenu()" aria-label="Abrir menu de navegação"></i>
       <nav>
         <ul class="nav-menu" id="navMenu">
           <li><a href="#sobre">Sobre</a></li>
