--- a/index.html
+++ b/index.html
@@ -18,12 +18,28 @@
       top: 0;
       z-index: 999;
     }
-    header .container { display: flex; justify-content: space-between; align-items: center; }
+     header .container { display: flex; justify-content: space-between; align-items: center; position: relative; padding: 0 20px; }
     header h1 { font-size: 2rem; }
-    .nav-menu { list-style: none; display: flex; gap: 20px; }
-    .nav-menu a { color: #f7c400; text-decoration: none; font-weight: 600; transition: color 0.3s; }
+    .nav-menu {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      padding: 0 20px;
+    }
+    .nav-menu a { color: #f7c400; text-decoration: none; font-weight: 600; transition: color 0.3s; display: flex; align-items: center; gap: 8px; }
     .nav-menu a:hover { color: #fff; }
-    .menu-toggle { display: none; font-size: 1.8rem; color: #f7c400; cursor: pointer; }
+    .menu-toggle { display: none; font-size: 1.8rem; color: #f7c400; cursor: pointer; z-index: 1001; }
+    .overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 998;
+    }
+    .overlay.active { display: block; animation: fadeIn 0.3s ease forwards; }
 
     .hero {
       position: relative;
@@ -127,26 +143,37 @@
         left: 0;
         width: 100%;
         text-align: center;
-        padding: 20px 0;
+        padding: 20px 20px;
+        animation: slideDown 0.3s ease forwards;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.5);
       }
       .nav-menu.active { display: flex; }
       .nav-menu li { margin: 10px 0; }
       .footer-info { align-items: center; text-align: center; }
+      @keyframes slideDown {
+        from { opacity: 0; transform: translateY(-10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
   </style>
 </head>
-<body>
+<body onclick="closeMenuOnOutsideClick(event)">
+  <div class="overlay" id="menuOverlay"></div>
   <header>
     <div class="container">
       <h1>Adega Lounge</h1>
       <i class="fas fa-bars menu-toggle" onclick="toggleMenu()" aria-label="Abrir menu de navegação"></i>
       <nav>
         <ul class="nav-menu" id="navMenu">
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#bebidas">Bebidas</a></li>
-          <li><a href="#galeria">Ambiente</a></li>
-          <li><a href="#eventos">Eventos</a></li>
-          <li><a href="#contato">Contato</a></li>
+          <li><a href="#sobre" onclick="closeMenu()"><i class="fas fa-info-circle"></i> Sobre</a></li>
+          <li><a href="#bebidas" onclick="closeMenu()"><i class="fas fa-wine-glass-alt"></i> Bebidas</a></li>
+          <li><a href="#galeria" onclick="closeMenu()"><i class="fas fa-image"></i> Ambiente</a></li>
+          <li><a href="#eventos" onclick="closeMenu()"><i class="fas fa-calendar-alt"></i> Eventos</a></li>
+          <li><a href="#contato" onclick="closeMenu()"><i class="fas fa-envelope"></i> Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -225,9 +252,29 @@
 
   <script>
     function toggleMenu() {
-      document.getElementById('navMenu').classList.toggle('active');
+      const menu = document.getElementById('navMenu');
+      const overlay = document.getElementById('menuOverlay');
+      menu.classList.toggle('active');
+      overlay.classList.toggle('active');
     }
-    ScrollReveal().reveal('.section', { origin: 'bottom', distance: '40px', duration: 1000, interval: 200 });
+    function closeMenu() {
+      document.getElementById('navMenu').classList.remove('active');
+      document.getElementById('menuOverlay').classList.remove('active');
+    }
+    function closeMenuOnOutsideClick(event) {
+      const menu = document.getElementById('navMenu');
+      const toggle = document.querySelector('.menu-toggle');
+      const overlay = document.getElementById('menuOverlay');
+      if (!menu.contains(event.target) && !toggle.contains(event.target)) {
+        closeMenu();
+      }
+    }
+    ScrollReveal().reveal('.section', {
+      origin: 'bottom',
+      distance: '40px',
+      duration: 1000,
+      interval: 200
+    });
   </script>
 </body>
 </html>
